<resources>
    <string name="app_name">Sweeper Craft</string>
    <string name="app_name_full">Sweeper Craft</string>
    <string name="continue_game">Continue Game</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="high_score">Highscores</string>
    <string name="map_size">Map Size:</string>
    <string name="game_mode">Game Mode:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="start_game">Start the game!</string>
    <string-array name="game_modes">
        <item>Adventure</item>
        <item>Rescue</item>
        <item>Classic</item>
    </string-array>
    <string-array name="map_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Infinite</item>
    </string-array>
    <string-array name="difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="mode_adventure_exp">The mine is filled with hidden treasures: swords to kill the monsters and food to heal you. You start with 4 lives.</string>
    <string name="mode_rescue_exp">Honeydew got lost in the mine! Your goal is to find a special tile hidden in the map before your score reaches zero. You have treasures hidden in the map to help you on the way.</string>
    <string name="mode_classic_exp">Good old minesweeper. One life, no treasures.</string>
    <string name="loading">Loading. Please wait...</string>
    <string name="mine">Mine</string>
    <string name="flag">Flag</string>
    <string name="protect_button">Protect</string>
    <string name="won_adventure">You Won!</string>
    <string name="won_adventure_extended">You emptied the mine. Go and build something great!</string>
    <string name="won_rescue">Honeydew!</string>
    <string name="won_rescue_extended">You rescued your friend. Well done!</string>
    <string name="won_classic">You Won!</string>
    <string name="won_classic_extended">That was a classy(ic) game.</string>
    <string name="lost_out_of_time">Sooo Slooow</string>
    <string name="lost_out_of_time_extended">Your friend starved waiting for you. Hurry the next time!</string>
    <string name="lost_died">Whoops.. you died</string>
    <string name="lost_died_zombie">A zombie ate your delicious brains!</string>
    <string name="lost_died_creeper">pssss... boom!</string>
    <string name="lost_died_enderman">You shouldn\'t have gazed upon the Enderman</string>
    <string name="lost_died_rabbit">and all your stuff got eaten by a giant rabbit!</string>
    <string name="mistake_flag">Ouch! Flag in a wrong place</string>
    <string name="found_zombie">Zombie wantz your brainzz</string>
    <string name="found_creeper">Psss... boom! Creeper crept up on you</string>
    <string name="found_enderman">Ouch... should not have gaze upon the Enderman</string>
    <string name="ate_pie">Delicious pie. Yum!</string>
    <string name="ate_steak">Meal restored your vitality</string>
    <string name="found_gold">Getting rich</string>
    <string name="found_diamond">You collected one diamond</string>
    <string name="found_treasure_sword">You found a sword!</string>
    <string name="found_treasure_map">You found a treasure map!</string>
    <string name="found_treasure_gold">You found a treasure!</string>
    <string name="found_treasure_empty">The chest was empty. unlucky.</string>
    <string name="found_sword">Go slay the monsters!</string>
    <string name="explosives_boom">Boom!</string>
    <string name="found_goal">Honeydew! you found him</string>
    <string name="uncovered_all_tiles">You explored the entire mine!</string>
    <string name="diamond_sword_kill_zombie">You killed a zombie. He was no match for you.</string>
    <string name="diamond_sword_kill_creeper">You killed a creeper and made a TNT out of the gunpowder it dropped.</string>
    <string name="diamond_sword_kill_enderman">You slayed an Enderman with a sword.</string>
    <string name="diamond_sword_mine_rock">Sword is not a pickaxe, thus it broke.</string>
    <string name="guide">Guide</string>
    <string name="guide_next">Next</string>
    <string name="guide_skip">Skip</string>
    <string name="guide_finish">Finish</string>
    <string name="guide_title_first">Guide: First Steps</string>
    <string name="guide_title_mode_classic">Guide: Classic Mode</string>
    <string name="guide_title_mode_with_food">Guide: With Food Mode</string>
    <string name="guide_title_mode_adventure">Guide: Adventure Mode</string>
    <string name="guide_title_final">Guide: Good Luck!</string>
    <string name="please_review_this_app">Please Review this app</string>
    <string name="review_this_app_explained">If you like this app you can motivate us by giving a 5 star rating and a comment in Android Market. Thank you!</string>
    <string name="button_later">Later</string>
    <string name="button_review_now">Review now!</string>
    <string name="tweet_share_title">Share</string>
    <string name="tweet_message">Got [score] while playing www.SweeperCraft.com on Android. Beat that!</string>
    <string name="tweet_message_rescue">I rescued Honeydew in [minutes] on an Android game www.SweeperCraft.com</string>
    <string name="tweet_message_share">Try a new puzzle game for Android: www.SweeperCraft.com</string>
    <string name="highscores_go_online"> You must be online for this </string>
    <string name="highscores_sign_in"> Click to sign in using Google </string>
    <string name="google_services_sign_in">Highscores are kept online on Google servers. You will need to login to use this feature.</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>
    <string name="sign_in">Sign In</string>
    <string name="store_description">
Puzzle game based on minesweeper game with a new twist. We also have MineCraft theme since we love the original game!

Disclaimer: This game is developed independently from Microsoft and Mojang. This game is also not related to the Minecraft game apart from similar theme.

The game include three game modes:
 - Classic for the lovers of original minesweeper game.
 - Adventure explore very large map where we hidden treasures through the map. You have four lives and can replenish them by discovering food. Your goal is to open all the hidden tiles, but it will not be easy.
 - Rescue you have to save your friend lost somewhere in the map before the time runs out. Hurry!

Other features:
 - Highsores via Google Play 
 - compete wit your friends
 - Pinch to zoom
 - Multiple themes
 - Frustration free

    </string>
    <string name="translated_by">Your Name</string>
    <string name="menu_calibrate">Calibrate touch</string>
    <string name="reset_calibration">Restore default</string>
    <string name="calibrate_click">Touch the cross</string>
    <string name="theme_minecraft">Minecraft</string>
    <string name="theme_classic">Classic</string>
    <string name="settings_gameplay">Game play</string>
    <string name="settings_global">Global</string>
    <string name="settings_show_grid">Show grid</string>
    <string name="settings_show_grid_explanation">black wire grid will be shown to clearly indicate tiles</string>
    <string name="settings_vibrate">Vibrate on touch</string>
    <string name="settings_vibrate_explanation">turn off vibration feedback to save battery life</string>
    <string name="settings_calibrate_touch">Calibrate touch input</string>
    <string name="settings_other">Other</string>
    <string name="settings_help">Help and F.A.Q.</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_summary">Game comes in multiple themes</string>
    <string name="settings_contribute">Contribute</string>
    <string name="settings_rate_app">Rate the app</string>
    <string name="settings_rate_app_summary">If you like the app, gives us a 5 star rating on android market:)</string>
    <string name="settings_spread_the_word">Spread the word</string>
    <string name="settings_spread_the_word_summary">Tell your friends about this app via social media!</string>
    <string name="settings_premium">Buy Premium</string>
    <string name="settings_premium_summary">If you really like this app, get us a cup of coffee. In return, you will get two new themes and no more ads</string>
    <string name="settings_information">Information</string>
    <string name="settings_tutorial">Tutorial</string>
    <string name="settings_tutorial_summary">Open tutorial guide on how to play</string>
    <string name="settings_bug">Report a bug</string>
    <string name="settings_bug_summary">Click here to report a bug in a game or make an improvement suggestion. </string>
    <string name="settings_webpage">Webpage</string>
    <string name="settings_webpage_summary">Credits, contributions and other info can be found on our website.</string>
    <string name="settings_show_badges">Show badges</string>
    <string name="settings_show_badges_explanation">You can hide badges dialog from appearing</string>
    <string name="settings_language_explanation">Ignore local language settings and use language of your choice</string>
    <string name="settings_highscore">Highscore</string>
    <string name="settings_login">Sign in with Google</string>
    <string name="settings_login_explanation">Use Google Leaderboard to track your highest scores</string>
    <string name="settings_logout">Sign out</string>
    <string name="settings_logout_explanation">Tracking of your scores will be turned off. It will be restored once you sign in again</string>
    <string name="settings_in_progress">In progress. You can leave settings now.</string>
    <string name="settings_about">About</string>
    <string name="settings_about_summary">Game version: [versionName] ([versionCode]). Developed by Karolis Misiunas with lots of help from others. We are independent developers and not affiliated to Mojang or Microsoft. </string>
    <string name="badge_e1_title">Using the Right end of Shovel</string>
    <string name="badge_e1_message">You earned the first 200 points on Easy.</string>
    <string name="badge_e2_title">You know how to use the pickaxe</string>
    <string name="badge_e2_message">You earned the first 1000 points on Easy.</string>
    <string name="badge_m1_title">Diggy diggy hole</string>
    <string name="badge_m1_message">You earned the first 200 points on Medium.</string>
    <string name="badge_m2_title">Enough stone for the first house</string>
    <string name="badge_m2_message">You earned the first 1000 points on Medium.</string>
    <string name="settings_language">Choose language</string>
    <string name="settings_language_default">Automatic</string>
</resources>